--- a/iletisim.html
+++ b/iletisim.html
@@ -52,6 +52,11 @@
                     <textarea cols="30" rows="10"></textarea>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    <input type="submit">
+                </td>
+            </tr>
         </table>
         <br>
         <br>
